v3.2.3/_sources/plugins/sda_fabric_border_device_info_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na

.. Anchors

.. _ansible_collections.cisco.dnac.sda_fabric_border_device_info_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.dnac.sda_fabric_border_device_info -- Information module for Sda Fabric Border Device
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `cisco.dnac collection <https://galaxy.ansible.com/cisco/dnac>`_ (version 3.2.3).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install cisco.dnac`.

    To use it in a playbook, specify: :code:`cisco.dnac.sda_fabric_border_device_info`.

.. version_added

.. versionadded:: 3.1.0 of cisco.dnac

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Get all Sda Fabric Border Device.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- dnacentersdk >= 2.3.3
- python >= 3.5


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-deviceIPAddress"></div>
                    <b>deviceIPAddress</b>
                    <a class="ansibleOptionLink" href="#parameter-deviceIPAddress" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>DeviceIPAddress query parameter. Device IP Address.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>
                    <b>dnac_debug</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_debug" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li><div style="color: blue"><b>no</b>&nbsp;&larr;</div></li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag for Cisco DNA Center SDK to enable debugging.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>
                    <b>dnac_host</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_host" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The Cisco DNA Center hostname.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>
                    <b>dnac_password</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_password" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The Cisco DNA Center password to authenticate.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
                    <b>dnac_port</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_port" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                    <b>Default:</b><br/><div style="color: blue">443</div>
                                    </td>
                                                                <td>
                                            <div>The Cisco DNA Center port.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
                    <b>dnac_username</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_username" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                    <b>Default:</b><br/><div style="color: blue">"admin"</div>
                                    </td>
                                                                <td>
                                            <div>The Cisco DNA Center username to authenticate.</div>
                                                                <div style="font-size: small; color: darkgreen"><br/>aliases: user</div>
                                    </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>
                    <b>dnac_verify</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_verify" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li><div style="color: blue"><b>yes</b>&nbsp;&larr;</div></li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag to enable or disable SSL certificate verification.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>
                    <b>dnac_version</b>
                    <a class="ansibleOptionLink" href="#parameter-dnac_version" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                    <b>Default:</b><br/><div style="color: blue">"2.2.2.3"</div>
                                    </td>
                                                                <td>
                                            <div>Informs the SDK which version of Cisco DNA Center to use.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-headers"></div>
                    <b>headers</b>
                    <a class="ansibleOptionLink" href="#parameter-headers" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">dictionary</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Additional headers.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>
                    <b>validate_response_schema</b>
                    <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li><div style="color: blue"><b>yes</b>&nbsp;&larr;</div></li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Flag for Cisco DNA Center SDK to enable the validation of request bodies against a JSON schema.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Attributes


.. Notes

Notes
-----

.. note::
   - Supports ``check_mode``
   - The plugin runs on the control node and does not use any ansible connection plugins, but instead the embedded connection manager from Cisco DNAC SDK
   - The parameters starting with dnac_ are used by the Cisco DNAC Python SDK to establish the connection

.. Seealso

See Also
--------

.. seealso::

   `Sda Fabric Border Device reference <https://dnacentersdk.readthedocs.io/en/latest/api/api.html#v3-0-0-summary>`_
       Complete reference of the Sda Fabric Border Device object model.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Get all Sda Fabric Border Device
      cisco.dnac.sda_fabric_border_device_info:
        dnac_host: "{{dnac_host}}"
        dnac_username: "{{dnac_username}}"
        dnac_password: "{{dnac_password}}"
        dnac_verify: "{{dnac_verify}}"
        dnac_port: "{{dnac_port}}"
        dnac_version: "{{dnac_version}}"
        dnac_debug: "{{dnac_debug}}"
        headers:
          custom: value
        deviceIPAddress: string
      register: result





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-dnac_response"></div>
                    <b>dnac_response</b>
                    <a class="ansibleOptionLink" href="#return-dnac_response" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>always</td>
                <td>
                                            <div>A dictionary or list with the response returned by the Cisco DNAC Python SDK</div>
                                        <br/>
                                                                <div style="font-size: smaller"><b>Sample:</b></div>
                                                <div style="font-size: smaller; color: blue; word-wrap: break-word; word-break: break-all;">{
      &quot;status&quot;: &quot;string&quot;,
      &quot;description&quot;: &quot;string&quot;,
      &quot;payload&quot;: {
        &quot;id&quot;: &quot;string&quot;,
        &quot;instanceId&quot;: 0,
        &quot;authEntityId&quot;: 0,
        &quot;displayName&quot;: &quot;string&quot;,
        &quot;authEntityClass&quot;: 0,
        &quot;instanceTenantId&quot;: &quot;string&quot;,
        &quot;deployPending&quot;: &quot;string&quot;,
        &quot;instanceVersion&quot;: 0,
        &quot;createTime&quot;: 0,
        &quot;deployed&quot;: true,
        &quot;isSeeded&quot;: true,
        &quot;isStale&quot;: true,
        &quot;lastUpdateTime&quot;: 0,
        &quot;name&quot;: &quot;string&quot;,
        &quot;namespace&quot;: &quot;string&quot;,
        &quot;provisioningState&quot;: &quot;string&quot;,
        &quot;resourceVersion&quot;: 0,
        &quot;targetIdList&quot;: [
          {}
        ],
        &quot;type&quot;: &quot;string&quot;,
        &quot;cfsChangeInfo&quot;: [
          {}
        ],
        &quot;customProvisions&quot;: [
          {}
        ],
        &quot;configs&quot;: [
          {}
        ],
        &quot;managedSites&quot;: [
          {}
        ],
        &quot;networkDeviceId&quot;: &quot;string&quot;,
        &quot;roles&quot;: [
          &quot;string&quot;
        ],
        &quot;saveWanConnectivityDetailsOnly&quot;: true,
        &quot;siteId&quot;: &quot;string&quot;,
        &quot;akcSettingsCfs&quot;: [
          {}
        ],
        &quot;deviceInterfaceInfo&quot;: [
          {}
        ],
        &quot;deviceSettings&quot;: {
          &quot;id&quot;: &quot;string&quot;,
          &quot;instanceId&quot;: 0,
          &quot;displayName&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;deployPending&quot;: &quot;string&quot;,
          &quot;instanceVersion&quot;: 0,
          &quot;connectedTo&quot;: [
            {}
          ],
          &quot;cpu&quot;: 0,
          &quot;dhcpEnabled&quot;: true,
          &quot;externalConnectivityIpPool&quot;: &quot;string&quot;,
          &quot;externalDomainRoutingProtocol&quot;: &quot;string&quot;,
          &quot;internalDomainProtocolNumber&quot;: &quot;string&quot;,
          &quot;memory&quot;: 0,
          &quot;nodeType&quot;: [
            &quot;string&quot;
          ],
          &quot;storage&quot;: 0,
          &quot;extConnectivitySettings&quot;: [
            {
              &quot;id&quot;: &quot;string&quot;,
              &quot;instanceId&quot;: 0,
              &quot;displayName&quot;: &quot;string&quot;,
              &quot;instanceTenantId&quot;: &quot;string&quot;,
              &quot;deployPending&quot;: &quot;string&quot;,
              &quot;instanceVersion&quot;: 0,
              &quot;externalDomainProtocolNumber&quot;: &quot;string&quot;,
              &quot;interfaceUuid&quot;: &quot;string&quot;,
              &quot;policyPropagationEnabled&quot;: true,
              &quot;policySgtTag&quot;: 0,
              &quot;l2Handoff&quot;: [
                {}
              ],
              &quot;l3Handoff&quot;: [
                {
                  &quot;id&quot;: &quot;string&quot;,
                  &quot;instanceId&quot;: 0,
                  &quot;displayName&quot;: &quot;string&quot;,
                  &quot;instanceTenantId&quot;: &quot;string&quot;,
                  &quot;deployPending&quot;: &quot;string&quot;,
                  &quot;instanceVersion&quot;: 0,
                  &quot;localIpAddress&quot;: &quot;string&quot;,
                  &quot;remoteIpAddress&quot;: &quot;string&quot;,
                  &quot;vlanId&quot;: 0,
                  &quot;virtualNetwork&quot;: {
                    &quot;idRef&quot;: &quot;string&quot;
                  }
                }
              ]
            }
          ]
        },
        &quot;networkWideSettings&quot;: {
          &quot;id&quot;: &quot;string&quot;,
          &quot;instanceId&quot;: 0,
          &quot;displayName&quot;: &quot;string&quot;,
          &quot;instanceTenantId&quot;: &quot;string&quot;,
          &quot;deployPending&quot;: &quot;string&quot;,
          &quot;instanceVersion&quot;: 0,
          &quot;aaa&quot;: [
            {}
          ],
          &quot;cmx&quot;: [
            {}
          ],
          &quot;dhcp&quot;: [
            {
              &quot;id&quot;: &quot;string&quot;,
              &quot;ipAddress&quot;: {
                &quot;id&quot;: &quot;string&quot;,
                &quot;paddedAddress&quot;: &quot;string&quot;,
                &quot;addressType&quot;: &quot;string&quot;,
                &quot;address&quot;: &quot;string&quot;
              }
            }
          ],
          &quot;dns&quot;: [
            {
              &quot;id&quot;: &quot;string&quot;,
              &quot;domainName&quot;: &quot;string&quot;,
              &quot;ip&quot;: {
                &quot;id&quot;: &quot;string&quot;,
                &quot;paddedAddress&quot;: &quot;string&quot;,
                &quot;addressType&quot;: &quot;string&quot;,
                &quot;address&quot;: &quot;string&quot;
              }
            }
          ],
          &quot;ldap&quot;: [
            {}
          ],
          &quot;nativeVlan&quot;: [
            {}
          ],
          &quot;netflow&quot;: [
            {}
          ],
          &quot;ntp&quot;: [
            {}
          ],
          &quot;snmp&quot;: [
            {}
          ],
          &quot;syslogs&quot;: [
            {}
          ]
        },
        &quot;otherDevice&quot;: [
          {}
        ],
        &quot;transitNetworks&quot;: [
          {
            &quot;idRef&quot;: &quot;string&quot;
          }
        ],
        &quot;virtualNetwork&quot;: [
          {}
        ],
        &quot;wlan&quot;: [
          {}
        ]
      }
    }</div>
                                    </td>
            </tr>
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Parsing errors

